Исправление замечания по pr

--- a/server/env.example
+++ b/server/env.example
@@ -28,6 +28,16 @@ SMTP_PASSWORD=your-app-password
 # Email отправителя (обычно совпадает с SMTP_USERNAME)
 SMTP_FROM=your-email@yandex.ru
 
+# TLS Configuration (обязательно)
+# Пути к TLS сертификату и приватному ключу
+# Для разработки: сгенерируйте самоподписанный сертификат командой:
+#   make generate-tls-cert
+# Или вручную:
+#   mkdir -p server/certs
+#   openssl req -x509 -newkey rsa:4096 -keyout server/certs/server.key -out server/certs/server.crt -days 365 -nodes -subj "/C=RU/ST=State/L=City/O=Goph-Keeper/CN=localhost"
+TLS_CERT_FILE=certs/server.crt
+TLS_KEY_FILE=certs/server.key
+
 # ==============================================
 # Дополнительные опции (через аргументы командной строки)
 # ==============================================
@@ -41,6 +51,8 @@ SMTP_FROM=your-email@yandex.ru
 # -jwt-secret     Секретный ключ для подписи JWT токенов
 # -smtp-host      SMTP хост (по умолчанию smtp.yandex.ru)
 # -smtp-port      SMTP порт (по умолчанию 465)
+# -tls-cert       Путь к TLS сертификату (обязательный)
+# -tls-key        Путь к TLS приватному ключу (обязательный)
 
 # ==============================================
 # Примечания
